--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,9 +1,15 @@
 @import "./mixins";
 
 .header{
-    @include flexbox(row, space-between, center);
     width: 100%;
     height: 100px;
+    @include flexbox(row, center, center);
+    background-color: $background-color;
+    header {
+        width: $width;
+        height: 100%;
+        @include flexbox(row, space-between, center);
+    }
     &__logo{
         font-size: 4rem;
         font-weight: 600;
