--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -5,5 +5,7 @@
     align-items: $align;
     flex-wrap: $flex-wrap;
 }
-
+$secondary-color : rgb(168, 168, 168);
+$background-color : #e6e6e6;
+$text-color : rgb(30, 32, 90);
 $width : 1175px;
