--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,15 +1,20 @@
 @import "./reset";
 @import "./mixins";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 html {
     font-size: 62.5%;
 }
 *{
     box-sizing: border-box;
+    color : $text-color;
+}
+a , h1, h2, h3, h4, h5, h6{
+    color : $text-color;
 }
 body {
-    @include flexbox(row, center);
+     @include flexbox(row, center);
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -21,9 +26,6 @@ code {
         monospace;
 }
 #root {
-    .App{
-        width: $width;
-       
-    }
+    width: 100%;
 }
 
