--- a/src/scss/item.scss
+++ b/src/scss/item.scss
@@ -31,6 +31,7 @@
         font-size: 1.7rem;
         // color : $secondary-color;
         text-overflow: ellipsis;
+        word-wrap: break-word;
         opacity: 0.5;
         overflow: hidden;
         display: -webkit-box;
