--- a/src/scss/body.scss
+++ b/src/scss/body.scss
@@ -1,56 +1,55 @@
-@import './mixins';
+@import "./mixins";
 
-.body--bg{
-    width: 100%;
-    background-color: $background-color;
-    .body {
-        margin: 0px auto;
-        width: $width;
-        @include flexbox(row, space-around);
-        &__left{
-            width: 30%;
-            margin-right: 2rem;
-            @include flexbox(column, flex-start, center);
-            &--input{
-                margin: 3.5rem 0px;
-                width: 95%;
-                outline:  none;
-                border : none;
-                border-radius: 50px;
-                padding :  1rem 2rem;
-                vertical-align: middle;
-                font-size: 1.8rem;
-                box-shadow: 0px 0px 13px #c7c3c4;
-            }
-        }
-        &__items{
-            width: 70%;
-            margin-top: 2.2rem;
-            margin-left: auto;
-            overflow: hidden;
-            display: grid;
-            grid-template-columns: 49% 49%;
-            column-gap: 20px;
-            row-gap: 25px;
-        }
+.body--bg {
+  width: 100%;
+  .body {
+    margin: 0px auto;
+    width: $width;
+    @include flexbox(row, space-around);
+    // &__left{
+    //     width: 30%;
+    //     margin-right: 2rem;
+    //     @include flexbox(column, flex-start, center);
+    //     &--input{
+    //         margin: 3.5rem 0px;
+    //         width: 95%;
+    //         outline:  none;
+    //         border : none;
+    //         border-radius: 50px;
+    //         padding :  1rem 2rem;
+    //         vertical-align: middle;
+    //         font-size: 1.8rem;
+    //         box-shadow: 0px 0px 13px #c7c3c4;
+    //     }
+    // }
+    &__items {
+      width: 100%;
+      margin-top: 2.2rem;
+      margin-left: auto;
+      overflow: hidden;
+      display: grid;
+      grid-template-columns: 32% 32% 32%;
+      column-gap: 20px;
+      row-gap: 25px;
     }
-    .pagination {
-        @include flexbox(row, center);
-        margin: 4rem;
-        div {
-            height: 40px;
-            width: 40px;
-            font-size: 1.4rem;
-            @include flexbox(row, center, center);
-            color : $text-color;
-            border-radius: 2px;
-            margin : 1rem;
-            background: white;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-        }
-        &__current {
-            background-color: $text-color !important;
-            color : white !important;
-        }
+  }
+  .pagination {
+    @include flexbox(row, center);
+    margin: 4rem;
+    div {
+      height: 40px;
+      width: 40px;
+      font-size: 1.4rem;
+      @include flexbox(row, center, center);
+      color: $text-color;
+      border-radius: 2px;
+      margin: 1rem;
+      background: white;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     }
+    &__current {
+      background-color: $text-color !important;
+      color: white !important;
+    }
+  }
 }
