--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,31 +1,36 @@
 @import "./reset";
 @import "./mixins";
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
-*{
-    box-sizing: border-box;
-    color : $text-color;
+* {
+  box-sizing: border-box;
+  color: $text-color;
 }
-a , h1, h2, h3, h4, h5, h6{
-    color : $text-color;
+a,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: $text-color;
 }
 body {
-     @include flexbox(row, center);
-    margin: 0;
-    font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-        monospace;
-}
-#root {
-    width: 100%;
+  @include flexbox(row, center);
+  margin: 0;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+#root {
+  width: 100%;
+}
