--- a/src/scss/body.scss
+++ b/src/scss/body.scss
@@ -5,23 +5,25 @@
   .body {
     margin: 0px auto;
     width: $width;
-    @include flexbox(row, space-around);
-    // &__left{
-    //     width: 30%;
-    //     margin-right: 2rem;
-    //     @include flexbox(column, flex-start, center);
-    //     &--input{
-    //         margin: 3.5rem 0px;
-    //         width: 95%;
-    //         outline:  none;
-    //         border : none;
-    //         border-radius: 50px;
-    //         padding :  1rem 2rem;
-    //         vertical-align: middle;
-    //         font-size: 1.8rem;
-    //         box-shadow: 0px 0px 13px #c7c3c4;
-    //     }
-    // }
+    &__title {
+      position: relative;
+      width: 220px;
+      text-align: center;
+      font-size: 4rem;
+      margin-top: 3rem;
+      font-family: Tahoma, Geneva, Verdana, sans-serif;
+      &::after {
+        content: "";
+        height: 60%;
+        width: 100%;
+        background-color: rgb(245, 245, 245);
+
+        position: absolute;
+        top: 65%;
+        left: 0;
+        z-index: -1;
+      }
+    }
     &__items {
       width: 100%;
       margin-top: 2.2rem;
