--- a/src/scss/item.scss
+++ b/src/scss/item.scss
@@ -63,6 +63,7 @@
     }
     &--name {
       margin-left: 0.9rem;
+      opacity: 0.9;
       font-weight: 300;
     }
     &--avatar {
@@ -85,7 +86,7 @@
     margin: 1rem 0rem;
     margin-bottom: 1.5rem;
 
-    line-height: 1.2;
+    line-height: 1.5;
     font-size: 1.4rem;
     opacity: 0.7;
 
