--- a/src/scss/categories.scss
+++ b/src/scss/categories.scss
@@ -1,30 +1,48 @@
 @import "./mixins";
 
+.categories {
+  margin-top: 3rem;
+  width: 100%;
+  cursor: pointer;
+  &__list {
+    @include flexbox(row);
+  }
+  &__item {
+    height: 35rem;
+    border-radius: 2rem;
+    width: 23rem;
+    margin-right: 2rem;
 
-.categories{
-    width: 100%;
-    background-color: white;
-    padding : 3.4rem 2.6rem;
-    border-radius: 8px;
-    &__title{
-        text-transform: uppercase;
-        font-size: 1.8rem;
-        font-weight: 600;
-        margin-bottom: 2rem;
+    background-image: url(https://picsum.photos/600/600);
+    background-size: cover;
+    position: relative;
+    &::after {
+      content: "";
+      height: 100%;
+      width: 100%;
+      background-image: linear-gradient(180deg, white, black);
+
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      border-radius: 2rem;
+      opacity: 0.2;
+      z-index: 2;
     }
-    &__list{
-        width: 100%;
-        li {
-            font-size: 1.6rem;
-            font-weight: 400;
-            height: 2rem;
-            padding-bottom: 3.4rem;
-            margin : 1rem 0px;
-            border-bottom : 1px solid rgb(214, 214, 214);
-            &:last-child{
-                border-bottom: 1px solid transparent;
-                padding-bottom: 0px;
-            }
-        }
+    &:hover::after {
+      background-image: linear-gradient(180deg, $primary-pink, $primary-pink);
     }
+    &--title {
+      font-size: 1.9rem;
+      color: white;
+      text-transform: uppercase;
+
+      position: absolute;
+      top: 86%;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 3;
+    }
+  }
 }
