--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,11 +2,13 @@
 
 .header {
   width: 100%;
-  height: 100px;
+  height: 90px;
   @include flexbox(row, center, center);
-  background-color: $background-color;
-  // position: fixed;
-  z-index: 10;
+  background: linear-gradient(to right, rgb(231, 191, 208), #dad1f3);
+  z-index: 20;
+  position: fixed;
+  top: 0;
+  left: 0;
   header {
     width: $width;
     height: 100%;
@@ -14,8 +16,12 @@
   }
   &__logo {
     font-size: 3.6rem;
-    font-weight: 700;
-    flex-grow: 1;
+    font-weight: 300;
+    // flex-grow: 1;
+    &::after {
+      content: ".";
+      color: rgb(187, 89, 89);
+    }
   }
   &__nav {
     width: 15%;
@@ -25,7 +31,7 @@
       opacity: 0.8;
       height: 50px;
       font-size: 1.8rem;
-      font-weight: 600;
+      font-weight: 400;
       text-decoration: none;
       color: black;
     }
