--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -27,10 +27,14 @@
     width: 15%;
     height: 100%;
     @include flexbox(row, space-between, center);
-    &--item a {
-      opacity: 0.8;
+    a {
+      text-decoration: none;
       height: 50px;
-      font-size: 1.8rem;
+      @include flexbox(row, center, center);
+    }
+    &--item {
+      opacity: 0.8;
+      font-size: 1.5rem;
       font-weight: 400;
       text-decoration: none;
       color: black;
