--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,7 @@
 @import "./reset";
 @import "./mixins";
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@100;200;300;400;500;600;700&display=swap");
 html {
   font-size: 62.5%;
 }
