Delete about-me and change a little scss

--- a/src/scss/body.scss
+++ b/src/scss/body.scss
@@ -20,7 +20,7 @@
         content: "";
         height: 60%;
         width: 100%;
-        background-color: rgb(245, 245, 245);
+        background-color: #c6d2ff75;
 
         position: absolute;
         top: 65%;
