--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -4,7 +4,7 @@
   margin: auto;
   width: 100%;
   height: 280px;
-  background-color: #cceaee;
+  background-color: #d0e1e4;
   & div:nth-child(1) {
     width: 18%;
   }
