--- a/src/scss/item.scss
+++ b/src/scss/item.scss
@@ -107,7 +107,7 @@
     font-size: 1.3rem;
     text-transform: uppercase;
 
-    border-bottom: 1px solid rgba(189, 189, 189, 0.8);
+    border-bottom: 1px solid rgba(189, 189, 189, 0.8) !important;
 
     transition: 0.2s all;
     &:hover {
