Setup for responsive

--- a/src/scss/initial/_mixins.scss
+++ b/src/scss/initial/_mixins.scss
@@ -14,4 +14,4 @@ $secondary-color: rgb(168, 168, 168);
 $background-color: #e6e6e6;
 $primary-pink: #ef534f;
 $text-color: rgb(30, 32, 90);
-$width: 1200px;
+$width: 85%;
