--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,6 @@
 @import "./initial/reset";
 @import "./initial/mixins";
+@import "./initial/responsive";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@100;200;300;400;500;600;700&display=swap");
 
