--- a/src/scss/parts/footer/_footer.scss
+++ b/src/scss/parts/footer/_footer.scss
@@ -3,10 +3,10 @@
 .footer {
   margin: auto;
   width: 100%;
-  height: 280px;
+  height: 240px;
   background-color: #d0e1e4;
   & div:nth-child(1) {
-    width: 18%;
+    width: 100%;
   }
   @include flexbox(row, center, center);
   &__logo {
@@ -18,7 +18,8 @@
     opacity: 0.5;
   }
   .contact {
-    width: 30%;
+    @include flexbox(column, center, center);
+    width: 100%;
     text-align: center;
     &__title {
       font-size: 2.2rem;
@@ -30,9 +31,20 @@
       margin: 2rem 0px;
     }
     &__social {
-      width: 100%;
+      @include Responsive(XS) {
+        width: 38%;
+      }
+      @include Responsive(SM) {
+        width: 26%;
+      }
+      @include Responsive(MD) {
+        width: 24%;
+      }
+      @include Responsive(XL) {
+        width: 20%;
+      }
       height: 2rem;
-      @include flexbox(row, space-between, center);
+      @include flexbox(row, space-between, center, wrap);
       img {
         height: 2rem;
         width: 2rem;
